--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,7 +32,7 @@ jobs:
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: build/docs.zip
+          file: build/Generated-Offline-Manual.zip
           asset_name: Generated-Offline-Manual.zip
           tag: Docs-Release
           overwrite: true
